# home

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-mlx.txt  requirements.txt
docs/: SETUP.md  operations.md
launchd/: __init__.py  com.homephoto.backup.plist.template  com.homephoto.dashboard.plist.template  com.homephoto.digest.plist.template  com.homephoto.mlx.plist.template  com.homephoto.worker.plist.template  install_launchd.py  uninstall_launchd.py
migrations/: 001_initial.sql  002_prompt_versions_and_venue_timestamps.sql  003_indexes.sql  004_immich_users.sql  005_venue_retry.sql  README.md
nginx/: home-food.conf
scripts/: backup_postgres.sh  configure_tailscale.py  install_nginx.py  monitor_processing.py  send_digest.py  setup_new_mac.py  smoke_dashboard.py  smoke_immich.py  smoke_llm.py  smoke_mlx.py  smoke_places.py
tests/: conftest.py  test_anthropic_provider.py  test_backup_script.py  test_config.py  test_cursor.py  test_dashboard_app.py  test_dashboard_feed.py  test_dashboard_map.py  test_dashboard_place.py  test_dashboard_places.py  test_dashboard_proxy.py  test_dashboard_review.py  test_dashboard_status.py  test_db.py  test_factory.py  test_fallback_provider.py  test_google_places.py  test_haversine.py  test_immich_client.py  test_install_launchd.py  test_makefile_guards.py  test_migration_001.py  test_migration_002.py  test_migration_003.py  test_mlx_provider.py  test_pipeline.py  test_pipeline_disambiguation.py  test_pipeline_llm.py  test_pipeline_venue.py  test_places_cli.py  test_prompts.py  (+9 more)
(+89 files in other folders)
