[project]
name = "home_photo_repo"
version = "0.1.0"
description = "Local home-photo ingestion + analysis service on top of Immich"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-socket>=0.7",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/home_photo_repo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --disable-socket"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["home_photo_repo"]
